# protein_chisel

./: .gitignore  .gitmodules  README.md  design.pka  pyproject.toml
configs/: README.md
docs/: SESSION_NOTES_2026-05-04.md  architecture.md  backfill_rescue.md  capabilities.md  cli_reference.md  codex_review_2026-04-28.md  dependencies.md  filters.md  future_plans.md  io_and_schemas.md  metrics_reference.md  pipelines.md  sampling.md  scoring.md  setup.md  sweep_parameters.md  testing.md  throat_blocker_feedback.md  tools.md  troubleshooting.md  tunnel_analysis.md  usage.md
examples/: README.md
scripts/: README.md  aggregate_plm_metrics.py  audit_aa_comp.py  audit_clash_omits.py  audit_pocket_metrics.py  classify_positions_pte_i1.py  compare_directional_to_baseline.py  flexibility_score.py  full_diagnostic_report.py  iterative_design_PTE_i1.py  iterative_design_v2.py  load_chiseled_runs.py  mpnn_ablation_test.py  notebook_driver_cell.py  notebook_driver_cell_array_job.py  precompute_plm_artifacts.py  probe_plm_memory.py  probe_plm_memory.sbatch  protonate_final_topk.py  run_caver.sh  run_chisel_design.sh  run_comprehensive_metrics.sbatch  run_iterative_design_PTE_i1.sbatch  run_iterative_design_v2.sbatch  run_metal3d.py  run_metal3d_test.sbatch  run_mpnn_ablation.sbatch  run_naturalness_metrics.sbatch  run_sequence_design_v1.sbatch  run_sidechain_packing_tests.sbatch  run_test_packer_swap.sbatch  test_packer_swap.py  test_protonate_parsers.py  test_protonate_ptm_specs.py
test_packer_swap_results/: results.tsv
tests/: README.md  test_apptainer.py  test_filters.py  (+21 more)
(+117 files in other folders)
