[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein_chisel"
version = "0.0.1"
description = "Tools and pipelines for refining sequences for de novo enzyme designs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Seth M. Woodbury", email = "woodbuse@uw.edu" }]
# Most heavyweight deps (torch, esm, transformers, pyrosetta, foldseek, ...)
# come from the cluster apptainer images. Host-side deps are intentionally light
# so the package installs cleanly into any container we use it from.
dependencies = [
    "pyyaml>=6",
    "click>=8",
    "numpy",
    "pandas",
    "biopython",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[project.scripts]
chisel = "protein_chisel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
